# PaperReproduce

OTextension/: CMakeCache.txt  CMakeLists.txt  Makefile  PrimeGroup.cpp  PrimeGroup.hpp  cmake_install.cmake  reciever.cpp  sender.cpp  test  test.cpp  testcpprepo.cpp
OTextension/Client/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  reciever  reciever.cpp
OTextension/Server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  reciever  sender  sender.cpp
SecureML(truncation)/: CMakeCache.txt  Utils.cpp  Utils.hpp  cmake_install.cmake  readme.txt
cpplearn/: AdditiveShare.cpp  AdditiveShare.hpp  CMakeCache.txt  CMakeLists.txt  Makefile  Utils.cpp  Utils.hpp  cmake_install.cmake  readme.txt  test.cpp  test1
